@@ -1,6 +1,7 @@
 Revision history for perl distribution Mojolicious-Plugin-AssetPack
 
 2.02 Not Released
+ - Add EXPERIMENTAL support for fetching assets from helpers
 
 2.01 2017-11-06T13:02:45+0100
  - Up version number to try to fix pause indexing issues
